# simtrader

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.scrum/: backlog.md  progress.md  sprint-01.md  sprint-02.md
alembic/: env.py
alembic/versions/: 0001_users.py  0002_saxo_tokens.py  0003_audit_log.py
configs/: backtest.example.yaml  paper.example.yaml
src/tradingplatform/: __init__.py
src/tradingplatform/agents/: __init__.py  evaluator.py  executor.py
src/tradingplatform/brokers/: __init__.py  base.py  ibkr.py  saxo.py  sim.py
src/tradingplatform/cli/: main.py
src/tradingplatform/config/: settings.py
src/tradingplatform/core/: __init__.py  accounts.py  instruments.py  orders.py  positions.py  quotes.py  signals.py
src/tradingplatform/marketdata/: __init__.py  base.py  csv_provider.py  synth.py
src/tradingplatform/oms/: __init__.py  manager.py
src/tradingplatform/persistence/: __init__.py
src/tradingplatform/portfolio/: __init__.py  tracker.py
src/tradingplatform/risk/: __init__.py  gates.py
src/tradingplatform/simulation/: __init__.py  backtest.py
src/tradingplatform/strategies/: __init__.py  base.py
tests/: test_backtest_demo.py  test_orders.py  test_position_pnl.py  test_risk.py  test_sim_broker.py
workers/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/src/: index.ts
workers/src/lib/: audit.ts  auth.ts  db.ts  session.ts  types.ts
workers/src/middleware/: auth.ts
workers/src/routes/: auth.ts
workers/src/ui/: auth.ts  (+2 more)
(+8 files in other folders)
